fix: increase font size on mobile

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -11,11 +11,11 @@
     --fontMinor: 'Barlow', sans-serif;
 
     /* Mobile display */
-    --majorH1: 85px;
-    --mobileH1: 75px;
-    --mobileH2: 35px;
-    --mobileH3: 26px;
-    --mobileP: 22px;
+    --majorH1: 95px;
+    --mobileH1: 85px;
+    --mobileH2: 40px;
+    --mobileH3: 30px;
+    --mobileP: 28px;
  }
 
 /* GLOBAL */
@@ -79,10 +79,6 @@ a {
 
 a:hover {
     color: var(--siteMajor);
-}
-
-.fuckoff {
-    text-align: center;
 }
 
 /* HEADER */
@@ -1126,21 +1122,21 @@ tr:hover {
     }
 
     .image-text p {
-        max-width: 500px;
+        max-width: 750px;
     }
 
     /* GRID */
     .grid-left h1 {
-        font-size: 100px;
+        font-size: 125px;
     }
 
     .grid-middle img {
         align-self: start;
-        height: 3250px;
+        height: 3750px;
     }
 
     .grid-right h1 {
-        font-size: 100px;
+        font-size: 120px;
     }
 
     .mateusz img {
@@ -1148,7 +1144,7 @@ tr:hover {
     }
 
     .mateusz p {
-        max-width: 350px;
+        max-width: 400px;
     }
 
     .karol img {
@@ -1156,7 +1152,7 @@ tr:hover {
     }
 
     .karol p {
-        max-width: 350px;
+        max-width: 400px;
     }
 
     .methods img {
@@ -1168,7 +1164,7 @@ tr:hover {
     }
 
     .methods p {
-        max-width: 350px;
+        max-width: 400px;
         align-self: flex-end;
     }
 
@@ -1238,7 +1234,7 @@ tr:hover {
 
     /* TABLE */
     table {
-        width: 800px;
+        width: 900px;
     }
 
     td,
@@ -1322,8 +1318,14 @@ tr:hover {
     }
 
     .welcome-text {
+        margin-top: 50px;
+        margin-bottom: 50px;
         padding-top: 30px;
         padding-bottom: 30px;
-        max-width: 500px;
+        max-width: 750px;
+    }
+
+    .welcome-text p {
+        max-width: 750px;
     }
 }
